120_grafana/40_grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: monitoring
  name: grafana
spec:
  ports:
    - port: 3000
      protocol: TCP
      targetPort: http
  selector:
    app: grafana
  sessionAffinity: None
