120_grafana/50_grafana-ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`grafana`,`grafana.tc1.mnl.de`)
    kind: Rule
    services:
    - name: grafana
      port: 3000
