120_grafana/50_grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: monitoring
  name: grafana
  annotations:
    cert-manager.io/cluster-issuer: ca-issuer
    traefik.ingress.kubernetes.io/router.middlewares: traefik-http2https@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - host: grafana.tc1.mnl.de
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: grafana
            port:
              number: 3000
  tls:
  - hosts:
    - grafana.tc1.mnl.de
    secretName: grafana-cert
